Add default parameters and commands

--- a/openapi-generic-cli.cabal
+++ b/openapi-generic-cli.cabal
@@ -4,14 +4,14 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           semantic-scholar-cli
+name:           openapi-generic-cli
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/semantic-scholar-cli#readme>
-homepage:       https://github.com/githubuser/semantic-scholar-cli#readme
-bug-reports:    https://github.com/githubuser/semantic-scholar-cli/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
+description:    Please see the README on GitHub at <https://github.com/githubuser/openapi-generic-cli#readme>
+homepage:       https://github.com/Hazelfire/openapi-generic-cli#readme
+bug-reports:    https://github.com/Hazelfire/openapi-generic-cli/issues
+author:         Sam Nolan
+maintainer:     samnolan555@gmail.com
+copyright:      2021 Sam Nolan
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,31 +21,36 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/semantic-scholar-cli
+  location: https://github.com/Hazelfire/openapi-generic-cli
 
 library
   exposed-modules:
       Lib
   other-modules:
-      Paths_semantic_scholar_cli
+      Paths_openapi_generic_cli
   hs-source-dirs:
       src
   build-depends:
       aeson
     , base >=4.7 && <5
     , bytestring
+    , directory
     , http-client
     , http-client-tls
+    , insert-ordered-containers
+    , json-pointy
     , lens
     , openapi3
+    , process
     , text
+    , typed-process
     , yaml
   default-language: Haskell2010
 
 executable semantic-scholar-cli-exe
   main-is: Main.hs
   other-modules:
-      Paths_semantic_scholar_cli
+      Paths_openapi_generic_cli
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -53,12 +58,17 @@ executable semantic-scholar-cli-exe
       aeson
     , base >=4.7 && <5
     , bytestring
+    , directory
     , http-client
     , http-client-tls
+    , insert-ordered-containers
+    , json-pointy
     , lens
+    , openapi-generic-cli
     , openapi3
-    , semantic-scholar-cli
+    , process
     , text
+    , typed-process
     , yaml
   default-language: Haskell2010
 
@@ -66,7 +76,7 @@ test-suite semantic-scholar-cli-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_semantic_scholar_cli
+      Paths_openapi_generic_cli
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -74,11 +84,16 @@ test-suite semantic-scholar-cli-test
       aeson
     , base >=4.7 && <5
     , bytestring
+    , directory
     , http-client
     , http-client-tls
+    , insert-ordered-containers
+    , json-pointy
     , lens
+    , openapi-generic-cli
     , openapi3
-    , semantic-scholar-cli
+    , process
     , text
+    , typed-process
     , yaml
   default-language: Haskell2010
