--- a/openapi-generic-cli.cabal
+++ b/openapi-generic-cli.cabal
@@ -44,10 +44,11 @@ library
     , process
     , text
     , typed-process
+    , uri-encode
     , yaml
   default-language: Haskell2010
 
-executable semantic-scholar-cli-exe
+executable api
   main-is: Main.hs
   other-modules:
       Paths_openapi_generic_cli
@@ -69,6 +70,7 @@ executable semantic-scholar-cli-exe
     , process
     , text
     , typed-process
+    , uri-encode
     , yaml
   default-language: Haskell2010
 
@@ -95,5 +97,6 @@ test-suite semantic-scholar-cli-test
     , process
     , text
     , typed-process
+    , uri-encode
     , yaml
   default-language: Haskell2010
