--- a/package.yaml
+++ b/package.yaml
@@ -34,12 +34,13 @@ dependencies:
 - directory
 - process
 - typed-process
+- uri-encode
 
 library:
   source-dirs: src
 
 executables:
-  semantic-scholar-cli-exe:
+  api:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
